fix some layout bug

--- a/client/src/components/Navbar/NavbarResponsive.css
+++ b/client/src/components/Navbar/NavbarResponsive.css
@@ -1,8 +1,6 @@
 /* Tablet */
 @media (min-width: 740px) and (max-width: 1023px) {
-     .header__navbar-item p {
-          font-size: 1.6rem;
-     }
+     
 }
 
 /* Mobile */
@@ -77,6 +75,14 @@
      }
 
      .header__navbar-item a {
+          color: white;
+     }
+
+     .header__navbar-item p {
+          color: white;
+     }
+
+     .navbar__product-container h4 {
           color: white;
      }
 
