--- a/client/src/components/ProductItem/ProductItem.module.css
+++ b/client/src/components/ProductItem/ProductItem.module.css
@@ -1,7 +1,7 @@
 .card {
   width: 270px;
   height: 350px;
-  margin: 20px 0px;
+  margin: 50px 6px;
   border-radius: 20px;
   text-decoration: none;
   position: relative;
